--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,16 @@
   text-align: center;
 }
 
-.board {
+.board-container {
   justify-content: center;
-  margin-top: 20vh;
+  margin-top: 5vh;
   margin-bottom: 20vh;
   margin-left: auto;
   margin-right: auto;
+}
+
+.board {
+  justify-content: center;
   display: grid;
   grid-template-columns: repeat(3, 150px);
 }
@@ -21,4 +25,13 @@
   text-align: center;
   display: table-cell;
   vertical-align: middle;
+}
+
+.button-container {
+  justify-self: center;
+  display: grid;
+}
+
+.button-container button {
+  justify-self: center;
 }
